<resources>
    <string name="app_name">Wamain</string>
    <string name="B58homet">t2. Home screen mods</string>
    <string name="B58homev">v3. Home screen mods</string>
    <string name="B58chatt">t3. Chat screen mods</string>
    <string name="B58chatv">v4. Chat screen mods</string>
    <string name="B58Donate">Donate</string>
    <string name="B58Donatesum">Liking the mod? Consider rewarding me for this hard work.</string>
    <string name="B58Donate1">Paypal</string>
    <string name="B58DonateSum1">Use this link to donate me through Paypal.</string>
    <string name="B58Donate2">Paytm</string>
    <string name="B58DonateSum2">Scan this QR code to donate me through Paytm.</string>
    <string name="newsettpage">Settings UI</string>
    <string name="newsettpagesum">Would you like to support me by having a new UI with ads? Then enable this.</string>
    <string name="Changelog">Changelogs</string>
    <string name="Changelogsum">Check out what\'s new in this version.</string>
    <string name="Devmsg">Dev\'s message</string>
    <string name="Devmsgsum">Click to view what the developer has to say(NOTE:Active internet connection required).</string>
    <string name="Success">Credits</string>
    <string name="Successsum">Find out the people who helped me in this project.</string>
    <string name="B58Share">Share</string>
    <string name="B58ShareSum">Liking it? Then dont wait to share and spread it among your family and friends.</string>
    <string name="B58Report">Report</string>
    <string name="B58ReportSum">Something wrong? Contact me by typing in your comments in the dialog box that appears after clicking. PLEASE Mail this report else I cannot respond.</string>
    <string name="B58visualsettingstitle">B58 Visual Mods</string>
    <string name="B58themes">v1. Themes</string>
    <string name="B58themessum">Options related to theming WhatsApp.</string>
    <string name="B58universal">v2. Universal mods</string>
    <string name="B58universalsum">Options that modify colors in all screens in general.</string>
    <string name="B58homevsum">Options that modify colors in home screen.</string>
    <string name="B58chatvsum">Options that modify colors in chat screen.</string>
    <string name="fabmods">v5. FAB</string>
    <string name="fabmodssum">Options that modify floating action button in home chats screen.</string>
    <string name="oldui">t2.1 Old UI</string>
    <string name="olduisum">Removes the CALLS STATUS and CHATS tab from home screen.</string>
    <string name="lsms">t2.2 Last seen in Main Screen</string>
    <string name="lsmssum">Shows Contact\'s Last Seen in Main Screen.</string>
    <string name="namems">t2.3 Name in Actionbar</string>
    <string name="namemssum">Replace \"WhatsApp\" with your profile name in Actionbar.</string>
    <string name="subhead">t2.4 Status/Number in Actionbar</string>
    <string name="subheadsum">Enable if you want to set either your number or status under name in Actionbar.</string>
    <string name="numstatus">t2.5 Choose between Number or Status</string>
    <string name="numstatussum">Enable-Number, Disable-Status.</string>
    <string name="Archv">t2.6 Hide Archived Chat label</string>
    <string name="Archvsum">Hides the Archived chats label.</string>
    <string name="COT">t2.7 Contact online Toast</string>
    <string name="COTsum">"Provides a toast whenever a contact comes online. Note:
        1. You must be online
        2. You must have a chat created with contact"</string>
    <string name="Hidemsg">t2.8 Hide Message</string>
    <string name="Hidemsgsum">Hide Contact\'s message in Chats screen.</string>
    <string name="hideinfo">t3.1 Hide Date and Time</string>
    <string name="hideinfosum">Hide date, time and name while copying two or more messages.</string>
    <string name="textsel">t3.2 Text Select</string>
    <string name="textselsum">Enable text selection to copy part of a message.</string>
    <string name="hidecall">t3.3 Hide Call Button</string>
    <string name="hidecallsum">Move voice and video call button to 3 dot menu.</string>
    <string name="hidepic">t3.4 Hide Profile Pic</string>
    <string name="hidepicsum">Hide Profile Pic from actionbar.</string>
    <string name="Gifchoose">t3.5 GIF Chooser</string>
    <string name="Gifchoosesum">Switch between Tenor and Giphy provider. Enable-Tenor, Disable-Giphy.</string>
    <string name="statusch">t3.6 Status in Chat screen</string>
    <string name="statuschsum">Display contact\'s status below actionbar in chat screen.</string>
    <string name="cenaction">t3.7 Centered Actionbar</string>
    <string name="cenactionsum">Move name and last seen to center of actionbar.</string>
    <string name="univactionbar">v2.1 Universal Actionbar Color</string>
    <string name="univactionbarsum">Choose a color for Actionbar.</string>
    <string name="univactionbartext">v2.2 Actionbar text/Icon</string>
    <string name="univactionbartextsum">Choose a color for texts or icons in Actionbar.</string>
    <string name="univstatusbar">v2.3 Universal Status Bar Color</string>
    <string name="univstatusbarsum">Choose a color for Status bar.</string>
    <string name="univnavbar">v2.4 Universal Navigation Bar Color</string>
    <string name="univnavbarsum">Choose a color for Navigation Bar.</string>
    <string name="tabcolor">v3.2 Home Tabs color</string>
    <string name="tabcolorsum">Choose a color for Chats,Status and Calls tab.</string>
    <string name="unreadc">v3.5 Unread Counter BG</string>
    <string name="unreadcsum">Choose a color for background of Unread counter.</string>
    <string name="onlinec">v3.6 \"Online\" color</string>
    <string name="onlinecsum">Choose a color for \"Online\" text if Last Seen in Main Screen is enabled.</string>
    <string name="ls">v3.7 \"Last Seen at\" Color</string>
    <string name="lssum">Choose a color for \"Last Seen at\" if Last Seen in Main Screen is enabled.</string>
    <string name="homebg">v3.1 Home screen background</string>
    <string name="homebgsum">Choose a color for background of chats in homescreen.</string>
    <string name="tabtitle">v3.8 Tabs title Color</string>
    <string name="tabtitlesum">Choose a color for CALLS, STATUS and CHATS texts.</string>
    <string name="chatconname">v3.10 Contact name color</string>
    <string name="chatconnamesum">Choose a color for Contact\'s name in Chats tab.</string>
    <string name="chatdate">v3.11 Date Color</string>
    <string name="chatdatesum">Choose a color for Date in Chats tab.</string>
    <string name="chatmsgfrom">v3.12 From message color</string>
    <string name="chatmsgfromsum">Choose a color for the recent sender\'s name in a group.</string>
    <string name="chatmsg">v3.13 Chat Message Color</string>
    <string name="chatmsgsum">Choose a color for incoming message in chat tab.</string>
    <string name="chatmsgcount">v3.14 Message count Color</string>
    <string name="chatmsgcountsum">Choose a color for the message count in chats tab.</string>
    <string name="statname">v3.15 Contact Name in Status Tab color</string>
    <string name="statnamesum">Choose a color for Contact\'s name in Status tab.</string>
    <string name="statdate">v3.16 Status upload time color</string>
    <string name="statdatesum">Choose a color for the time when status is uploaded.</string>
    <string name="callsname">v3.17 Contact\'s name in Calls tab color</string>
    <string name="callsnamesum">Choose a color for Contact\'s name in calls tab.</string>
    <string name="callscount">v3.18 Calls count color</string>
    <string name="callscountsum">Choose a color for calls count in calls tab.</string>
    <string name="callsdate">v3.19 Calls date color</string>
    <string name="callsdatesum">Choose a color for time of call in calls tab.</string>
    <string name="Textsize">v3.9 Text size</string>
    <string name="Textsizesum">Change Text size for entire main screen.</string>
    <string name="contname">v4.1 Contact Name Color</string>
    <string name="contnamesum">Choose a color for Contact Name in Actionbar.</string>
    <string name="contls">v4.2 Contact Last Seen Color</string>
    <string name="contlssum">Choose a color for Contact Last Seen.</string>
    <string name="statusbg">v4.3 Contact Status Background Color</string>
    <string name="statusbgsum">Choose a color for Status Background if Status under name is enabled.</string>
    <string name="statust">v4.4 Status Text Color</string>
    <string name="statustsum">Choose a Color for Status Text if Status under name is enabled.</string>
    <string name="rightb">v4.5 Right Bubble Color</string>
    <string name="rightbsum">Choose a color for the background of messages that you send.</string>
    <string name="righttime">v4.6 Right time Color</string>
    <string name="righttimesum">Choose a color for time of messages that you send.</string>
    <string name="rightt">v4.7 Right Text Color</string>
    <string name="righttsum">Choose a color for messages that you send.</string>
    <string name="leftb">v4.8 Left bubble Color</string>
    <string name="leftbsum">Choose a color for the background of messages that you receive.</string>
    <string name="lefttime">v4.9 Left Time Color.</string>
    <string name="lefttimesum">Choose a color for the time of messages that you receive.</string>
    <string name="leftt">v4.10 Left Text Color</string>
    <string name="lefttsum">Choose a color for the messages that you receive.</string>
    <string name="entrytext">v4.11 Text Entry Color</string>
    <string name="entrytextsum">Choose a color for the messages that you type.</string>
    <string name="entrytexthint">v4.12 Entry Hint color</string>
    <string name="entrytexthintsum">Choose a color for the text that is present before typing.</string>
    <string name="entrybg">v4.13 Text Entry Background Color</string>
    <string name="entrybgsum">Choose a color for the background of text that you type.</string>
    <string name="sendicon">v4.14 Send/Voice button Color</string>
    <string name="sendiconsum">Choose a color for the send/voice note button.</string>
    <string name="sendiconbg">v4.15 Send/Voice button Background Color</string>
    <string name="sendiconbgsum">Choose a color for the Send/Voice button background.</string>
    <string name="quotname">v4.16 Quoted name Color</string>
    <string name="quotnamesum">Choose a color for contact name when a message is quoted.</string>
    <string name="quotmsg">v4.17 Quoted text Color</string>
    <string name="quotmsgsum">Choose a color for messages that are quoted.</string>
    <string name="quotbg">v4.18 Quoted Background Color</string>
    <string name="quotbgsum">Choose a color for the background of a quoted message.</string>
    <string name="Hidename">t2.8 Hide name</string>
    <string name="Hidenamesum">Enable to hide the sender\'s/group\'s name.</string>
    <string name="univactionbargr">Gradient for Action Bar</string>
    <string name="univactionbargrsum">Enable Gradient colors for Action Bar.</string>
    <string name="conpickmods">v6. ContactPicker Screen mods</string>
    <string name="conbggr">Gradient for ContactPicker screen background</string>
    <string name="conbggrsum">Enable Gradient for ContactPicker screen background.</string>
    <string name="conbg">v6.1 ContactPicker screen background</string>
    <string name="conbgsum">Choose a color for background of contacts in ContactPicker screen.</string>
    <string name="conconname">v6.2 Contact name color</string>
    <string name="conconnamesum">Choose a color for Contact\'s name in ContactPicker screen.</string>
    <string name="constatus">v6.3 Contact Status color</string>
    <string name="constatussum">Choose a color for status of contact below name.</string>
    <string name="conphtype">v6.4 Contact Phone type color</string>
    <string name="conphtypesum">Choose a color for phone type of contact.</string>
</resources>