<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/B58chatv"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <com.B58works.ColorPref android:title="@string/contname" android:key="Convcontname" android:summary="@string/contnamesum" />
    <com.B58works.ColorPref android:title="@string/contls" android:key="Convcontls" android:summary="@string/contlssum" />
    <com.B58works.ColorPref android:title="@string/statusbg" android:key="ModChatGStatusB" android:summary="@string/statusbgsum" />
    <com.B58works.ColorPref android:title="@string/statust" android:key="ModChatGStatusT" android:summary="@string/statustsum" />
    <com.B58works.ColorPref android:title="@string/rightb" android:key="rightfill" android:summary="@string/rightbsum" />
    <com.B58works.ColorPref android:title="@string/righttime" android:key="rightdate" android:summary="@string/righttimesum" />
    <com.B58works.ColorPref android:title="@string/rightt" android:key="rightmsg" android:summary="@string/righttsum" />
    <com.B58works.ColorPref android:title="@string/leftb" android:key="leftfill" android:summary="@string/leftbsum" />
    <com.B58works.ColorPref android:title="@string/lefttime" android:key="leftdate" android:summary="@string/lefttimesum" />
    <com.B58works.ColorPref android:title="@string/leftt" android:key="leftmsg" android:summary="@string/lefttsum" />
    <com.B58works.ColorPref android:title="@string/entrytext" android:key="textinentry" android:summary="@string/entrytextsum" />
    <com.B58works.ColorPref android:title="@string/entrytexthint" android:key="hintinentry" android:summary="@string/entrytexthintsum" />
    <com.B58works.ColorPref android:title="@string/entrybg" android:key="entrybg" android:summary="@string/entrybgsum" />
    <com.B58works.ColorPref android:title="@string/sendicon" android:key="sendcolor" android:summary="@string/sendiconsum" />
    <com.B58works.ColorPref android:title="@string/sendiconbg" android:key="sendbg" android:summary="@string/sendiconbgsum" />
    <com.B58works.ColorPref android:title="@string/quotname" android:key="quoted_name_picker" android:summary="@string/quotnamesum" />
    <com.B58works.ColorPref android:title="@string/quotmsg" android:key="quoted_text_picker" android:summary="@string/quotmsgsum" />
    <com.B58works.ColorPref android:title="@string/quotbg" android:key="quoted_bg_picker" android:summary="@string/quotbgsum" />
</PreferenceScreen>