<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" xmlns:robobunny="http://robobunny.com">
    <com.B58works.ColorPref android:title="@string/homebg" android:key="homebg" android:summary="@string/homebgsum" />
    <com.B58works.ColorPref android:title="@string/tabcolor" android:key="Tabcolor" android:summary="@string/tabcolorsum" />
    <com.B58works.ColorPref android:title="@string/unreadc" android:key="counterbg" android:summary="@string/unreadcsum" />
    <com.B58works.ColorPref android:title="@string/onlinec" android:key="ModOnlineColor" android:summary="@string/onlinecsum" />
    <com.B58works.ColorPref android:title="@string/ls" android:key="ModlastseenColor" android:summary="@string/lssum" />
    <com.B58works.ColorPref android:title="@string/tabtitle" android:key="pagetitle" android:summary="@string/tabtitlesum" />
    <com.B58works.SeekBarPreference android:max="35" android:title="@string/Textsize" android:key="main_text" android:summary="@string/Textsizesum" android:defaultValue="15" robobunny:min="10" robobunny:unitsLeft="" robobunny:unitsRight="sp" />
    <com.B58works.ColorPref android:title="@string/chatconname" android:key="Chatcontname" android:summary="@string/chatconnamesum" />
    <com.B58works.ColorPref android:title="@string/chatdate" android:key="Chatdate" android:summary="@string/chatdatesum" />
    <com.B58works.ColorPref android:title="@string/chatmsgfrom" android:key="Chatfrom" android:summary="@string/chatmsgfromsum" />
    <com.B58works.ColorPref android:title="@string/chatmsg" android:key="Chatmsg" android:summary="@string/chatmsgsum" />
    <com.B58works.ColorPref android:title="@string/chatmsgcount" android:key="Chatmsgcount" android:summary="@string/chatmsgcountsum" />
    <com.B58works.ColorPref android:title="@string/statname" android:key="Statcontname" android:summary="@string/statnamesum" />
    <com.B58works.ColorPref android:title="@string/statdate" android:key="Statdate" android:summary="@string/statdatesum" />
    <com.B58works.ColorPref android:title="@string/callsname" android:key="Callcontname" android:summary="@string/callsnamesum" />
    <com.B58works.ColorPref android:title="@string/callscount" android:key="Callscrcount" android:summary="@string/callscountsum" />
    <com.B58works.ColorPref android:title="@string/callsdate" android:key="Callscrdate" android:summary="@string/callsdatesum" />
</PreferenceScreen>