<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/B58visualsettingstitle"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <Preference android:layout="@layout/ad2" />
    <PreferenceCategory android:title="Misc" android:key="cat_about">
        <PreferenceScreen  android:title="@string/B58Donate" android:summary="@string/B58Donatesum">
            <Preference android:title="@string/B58Donate1" android:summary="@string/B58DonateSum1">
                <intent android:action="android.intent.action.VIEW" android:data="https://paypal.me/teamb58" />
            </Preference>
            <Preference android:title="@string/B58Donate2" android:summary="@string/B58DonateSum2">
                <intent android:action="android.intent.action.VIEW" android:data="https://imgur.com/rCp60Il" />
            </Preference>
        </PreferenceScreen>
        <SwitchPreference android:title="@string/newsettpage" android:key="support" android:summary="@string/newsettpagesum" android:defaultValue="false" />
        <com.B58works.Activities android:title="@string/Changelog" android:key="clogs" android:summary="@string/Changelogsum" />
        <com.B58works.Activities android:title="@string/Devmsg" android:key="devmsg" android:summary="@string/Devmsgsum" />
    </PreferenceCategory>
    <PreferenceCategory android:title="Mods" android:key="cat_wa">
        <Preference android:key="vthemes" android:title="@string/B58themes" android:summary="@string/B58themessum" />
        <Preference android:key="vuniversal" android:title="@string/B58universal" android:summary="@string/B58universalsum" />
        <Preference android:key="vhome" android:title="@string/B58homev" android:summary="@string/B58homevsum" />
        <Preference android:key="vchat" android:title="@string/B58chatv" android:summary="@string/B58chatvsum" />
        <Preference android:key="vfab" android:title="@string/fabmods" android:summary="@string/fabmodssum" />
    </PreferenceCategory>
    <PreferenceCategory android:title="About" android:key="cat_about">
        <com.B58works.Activities android:title="@string/Success" android:key="credits" android:summary="@string/Successsum" />
        <com.B58works.Activities android:title="@string/B58Share" android:key="share" android:summary="@string/B58ShareSum" />
        <Preference android:title="@string/B58Report" android:summary="@string/B58ReportSum">
            <intent android:targetPackage="com.whatsapp" android:targetClass="com.B58.B58.B58" />
        </Preference>
        <Preference android:title="Official Website" android:summary="Website of WhatsApp B58 Edition v12">
            <intent android:action="android.intent.action.VIEW" android:data="http://destyy.com/w0unh8" />
        </Preference>
    </PreferenceCategory>
    <Preference android:layout="@layout/ad2" />
</PreferenceScreen>