<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/conpickmods"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <SwitchPreference android:title="@string/conbggr" android:key="conbggrc" android:summary="@string/conbggrsum" android:defaultValue="false" />
    <com.B58works.ColorPref android:title="@string/conbg" android:key="conbg" android:summary="@string/conbgsum" />
    <com.B58works.ColorPref android:key="conbggr" android:dependency="conbggrc" />
    <ListPreference android:entries="@array/gr_style" android:title="Gradient Style" android:key="conbgor" android:defaultValue="0" android:entryValues="@array/actionbarStyleListValues" />
    <com.B58works.ColorPref android:title="@string/conconname" android:key="conname" android:summary="@string/conconnamesum" />
    <com.B58works.ColorPref android:title="@string/constatus" android:key="constatus" android:summary="@string/constatussum" />
    <com.B58works.ColorPref android:title="@string/conphtype" android:key="contype" android:summary="@string/conphtypesum" />
</PreferenceScreen>