<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/B58universal"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <SwitchPreference android:title="@string/univactionbargr" android:key="actbargr" android:summary="@string/univactionbargrsum" android:defaultValue="false" />
    <com.B58works.ColorPref android:title="@string/univactionbar" android:key="ActionbarColor" android:summary="@string/univactionbarsum" />
    <com.B58works.ColorPref android:key="ActionbarColorgr" android:dependency="actbargr" />
    <ListPreference android:entries="@array/gr_style" android:title="Gradient Style" android:key="homebgor" android:defaultValue="0" android:entryValues="@array/actionbarStyleListValues" />
    <com.B58works.ColorPref android:title="@string/univactionbartext" android:key="ActionbartextColor" android:summary="@string/univactionbartextsum" />
    <com.B58works.ColorPref android:title="@string/univstatusbar" android:key="StatusbarColor" android:summary="@string/univstatusbarsum" />
    <com.B58works.ColorPref android:title="@string/univnavbar" android:key="NavbarColor" android:summary="@string/univnavbarsum" />

</PreferenceScreen>